--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,16 +3,17 @@ description: 'A wrapper to connect websockets for the web_socket_channel package
 homepage: 'https://github.com/peiffer-innovations/web_socket_channel_connect'
 version: '1.0.2+6'
 
-environment: 
+environment:
   sdk: '>=3.0.0 <4.0.0'
 
-dependencies: 
+dependencies:
   web_socket_channel: '^2.4.0'
 
-dev_dependencies: 
+dev_dependencies:
+  flutter_lints: '^3.0.1'
   test: '^1.24.9'
 
-ignore_updates: 
+ignore_updates:
   - 'archive'
   - 'async'
   - 'boolean_selector'
