--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: 'web_socket_channel_connect'
 description: 'A wrapper to connect websockets for the web_socket_channel package that gives an error on failure.'
 homepage: 'https://github.com/peiffer-innovations/web_socket_channel_connect'
-version: '1.0.2+6'
+version: '1.0.3'
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
