--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  web_socket_channel: '2.4.0'
+  web_socket_channel: '^2.4.0'
 
 dev_dependencies:
   flutter_lints: '^3.0.1'
